adds rock paper scissors buttons

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <!-- Place your content here -->
+    <button>ROCK</button>
+    <button>PAPER</button>
+    <button>SCISSORS</button>
 </body>
 </html>
