--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button>ROCK</button>
-    <button>PAPER</button>
-    <button>SCISSORS</button>
+    <button id="play">ROCK</button>
+    <button id="play">PAPER</button>
+    <button id="play">SCISSORS</button>
 </body>
 </html>
