adds playgame function and links app.js to html file

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
     <button id="play">ROCK</button>
     <button id="play">PAPER</button>
     <button id="play">SCISSORS</button>
+    <script src="/src/js/app.js"></script>
 </body>
 </html>
