adds functions to all buttons with console logging different choices

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button id="play">ROCK</button>
-    <button id="play">PAPER</button>
-    <button id="play">SCISSORS</button>
+    <button id="play-rock">ROCK</button>
+    <button id="play-paper">PAPER</button>
+    <button id="play-scissors">SCISSORS</button>
+    
     <script src="/src/js/app.js"></script>
 </body>
 </html>
