--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <button id="play-rock">ROCK</button>
     <button id="play-paper">PAPER</button>
     <button id="play-scissors">SCISSORS</button>
+    <div id="display-choice"></div>
     
     <script src="/src/js/app.js"></script>
 </body>
